--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ h1 {
 
 * {
   font: inherit;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -42,6 +45,7 @@ body {
   font-size: 36px;
   cursor: pointer;
   color: #f4d1ae;
+  margin-left: 8px;
 }
 #reset {
   color: #12263a;
