--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+:root {
+  --title-color: #31456a;
+  --background-color: #e3edf7;
+  --svg-color: #b7c5d3;
+  --silver: #cbd7e3;
+  --red: #f7455c;
+}
+html {
+  font-size: 62.5%;
+}
+
 dial {
   height: 400px;
   width: 400px;
@@ -6,15 +17,18 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 48px;
+  font-size: 4.8rem;
   text-transform: uppercase;
-  color: #06bcc1;
+  color: var(--title-color);
+  font-weight: 600;
+  margin: 3rem;
 }
 .timer-container {
   position: relative;
   display: flex;
   align-self: center;
   justify-content: center;
+  padding: 1rem;
 }
 
 * {
@@ -30,44 +44,24 @@ body {
   /* background-color: #f4edea; */
 }
 
-.timer-container input {
+input {
   display: block;
   border: none;
-  width: 240px;
+  width: 25rem;
+  height: 25rem;
+  border-radius: 50%;
   font-size: 90px;
   text-align: center;
-
-  /* change color inside input */
-  /* background-color: #f4edea; */
-  color: #12263a;
+  color: var(--title-color);
+  background-color: var(--background-color);
+  box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25), -8px -8px 12px 0 rgba(255, 255, 255, 0.5);
 }
 
-.timer-container button {
-  border: none;
-  font-size: 36px;
-  cursor: pointer;
-  background: white;
-
-  /* change color inside iccon button */
-  /* color: #f4d1ae; */
-  margin-left: 8px;
-}
-/* #reset {
-  color: #12263a;
-} */
-
-/* .control-play-stop :nth-child(-n + 2):hover {
-  color: #12263a;
-} */
-
-.timer button:focus {
+button:focus {
   outline: none;
 }
-/* .duration {
-  background-color: #12263a;
-} */
 
-.timer input:focus {
+input:focus {
   outline: none;
 }
 .controls {
@@ -86,21 +80,58 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+  background: var(--background-color);
 }
-/* glass efect */
+.stroke {
+  background-color: red;
+}
 .wrapper-timer {
+  margin: 1rem;
+  border-radius: 2rem;
   background: white;
-  min-height: 60vh;
-  width: 60vh;
-  background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.3));
+  min-height: 80vh;
+  min-width: 30vw;
+  background: var(--background-color);
+  box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25), -8px -8px 12px 0 rgba(255, 255, 255, 0.5);
 }
 .control-play-stop {
-  margin-top: 1rem;
-
-  /* background-color: #12263a; */
-  /* display: flex; */
+  margin: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.control-play-stop > button {
+.control-play-stop button {
+  height: 4.8rem;
+  width: 4.8rem;
+  margin: 2rem;
   border: none;
+  border: 2px solid var(--silver);
+
+  background-color: var(--background-color);
+  box-shadow: 8px 6px 16px 0 rgba(0, 0, 0, 0.2), -8px -8px 12px 0 rgba(255, 255, 255, 0.7);
+  border-radius: 1rem;
+}
+circle {
+  padding: 1rem;
+}
+.filter {
+  filter: drop-shadow(0.35rem 0.4rem 0.4rem rgba(255, 255, 255, 0.8));
+}
+
+@media screen and (max-width: 700px) {
+  .wrapper-timer {
+    transform: scale(0.9);
+    min-width: 100%;
+  }
+  h1 {
+    margin: 1rem;
+  }
+}
+@media screen and (max-width: 350px) {
+  /* .wrapper-timer {
+    transform: scale(0.9);
+  } */
+  h1 {
+    margin: 0.5rem;
+  }
 }
